# genalize

./: .gitignore  README.md  docker-compose.yml  env.example
backend/: Dockerfile  manage.py  pyproject.toml
backend/api/: models.py  serializers.py  urls.py  views.py
backend/genalize/: asgi.py  celery.py  settings.py  urls.py  wsgi.py
docs/: deployment.md
frontend/apps/landing-page/: index.html  package-lock.json  package.json  tailwind.config.js
frontend/apps/landing-page/src/: App.css  App.tsx  index.tsx
frontend/apps/landing-page/src/components/: About.tsx  ClientsSlider.tsx  Contact.tsx  Footer.tsx  Header.tsx  Hero.tsx  Process.tsx  Projects.tsx  Services.tsx
frontend/apps/portal/: Dockerfile  package-lock.json  package.json  tailwind.config.js
infrastructure/n8n/: Dockerfile
